Criação de testes unitários de PostService.